@@ -1,6 +1,8 @@
 Code and stuff:
  * Dmitry Medvinsky <dmedvinsky@gmail.com>
  * Kim Hempel <kim@hempel.nu>
+ * Paul Vint <pjvint@gmail.com>
+ * Ryan Quinlan <ryan.van.quinlan@gmail.com>
 
 Bugs and ideas:
  * Sergei Sarbash <sarbash.s@gmail.com>
