@@ -1,4 +1,4 @@
-.TH GSIMPLECAL 1 "2011-12-06"
+.TH GSIMPLECAL 1 "2012-02-18"
 .SH NAME
 gsimplecal \- lightweight calendar applet
 
@@ -63,6 +63,8 @@ mark_today = 1
 .br
 show_week_numbers = 0
 .br
+close_on_unfocus = 0
+.br
 external_viewer = sunbird -showdate "%Y-%m-%d"
 .br
 clock_format = %a %d %b %H:%M
@@ -78,6 +80,10 @@ mainwindow_skip_taskbar = 1
 mainwindow_resizable = 0
 .br
 mainwindow_position = none
+.br
+mainwindow_xoffset = 0
+.br
+mainwindow_yoffset = 0
 .br
 clock_label = UTC
 .br
@@ -107,6 +113,12 @@ somehow, e.g. in bold print).
 .TP 5
 \fBshow_week_numbers\fP: 1 or 0, defaults to 0.
 Sets whether week numbers are shown in the calendar.
+
+.TP 5
+\fBclose_on_unfocus\fP: 1 or 0, defaults to 0.
+Sets whether the calendar will close if the window loses focus. Note that if
+mainwindow_skip_taskbar is set to 1 then the calendar window may not be given
+focus upon creation
 
 .TP 5
 \fBexternal_viewer\fP: string, defaults to empty string.
@@ -169,6 +181,11 @@ it's up to your window manager to decide, where to place the window
 (this one is useful when you bind gsimplecal invocation on some hotkey, so you
 can configure your window manager to place gsimplecal in some predefined
 position).
+
+.TP 5
+\fBmainwindow_xoffset\fP and \fBmainwindow_yoffset\fP: integer, default to 0.
+Allow for main window position fine tuning. Throw an integer at these, and
+it'll move the window by that number of pixels.
 
 .TP 5
 \fBclock_label\fP and \fBclock_tz\fP: string
